@@ -61,7 +61,7 @@ test_uriparser_test_SOURCES = \
 
 
 EXTRA_DIST = \
-	doc/ac*.m4 \
+	doc/aclocal.m4 \
 	doc/configure \
 	doc/Makefile.in \
 	\
