@@ -73,12 +73,10 @@
 #undef URI_STRNCMP
 #define URI_STRNCMP wcsncmp
 
+/* TODO Remove on next source-compatibility break */
 #undef URI_SNPRINTF
 #if (defined(__WIN32__) || defined(_WIN32) || defined(WIN32))
 # define URI_SNPRINTF _snwprintf
 #else
-# ifndef HAVE_SWPRINTF
-#  error Function swprintf required but missing.
-# endif	
 # define URI_SNPRINTF swprintf
 #endif
